[package]
name = "rust-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-wallet"

[dependencies]
# Runtime
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.11", default-features = false, features = ["yaml"] }
dotenv = "0.15.0"
uuid = { version = "1.1.1", features = ["v4"] }

# Telemetry
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-actix-web = "0.5"

# Serialization
serde = "1.0.115"
serde-aux = "3"
serde_json = "1.0.81"

# Blockchain and Security
anyhow = "1.0"
secp256k1 = { version = "0.22.1", features = ["rand"] }
web3 = "0.18.0"
tiny-keccak = { version = "2.0.2" }
magic-crypt = "3.1.10"